# watercooler

./: .gitignore  LICENSE  README.md  docker-compose.yml  precommit.sh
api/: Cargo.toml  Dockerfile  Rocket.toml
api/migrations/2020-08-24-235616_users/: down.sql  up.sql
api/src/: lib.rs  main.rs  schema.rs
api/src/db/: mod.rs  users.rs
api/src/models/: user.rs
api/src/routes/: mod.rs  users.rs
api/templates/: index.hbs
docker/: docker-compose.yml
docker/client/: Dockerfile
docker/rocket/: Dockerfile  docker-entrypoint.sh
web/: .eslintrc  Cargo.toml  Dockerfile  package.json
