[package]
name = "water-cooler-api"
version = "0.1.0"
authors = ["Mark Siebert <mark@bluematador.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
diesel = { version = "1.4.1", features = ["postgres"] }
serde = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = [
    "json",
    "diesel_postgres_pool",
    "handlebars_templates",
    "tera_templates"
]
