[package]
name = "watercooler"
version = "0.1.0"
authors = ["Mark Siebert <mark@bluematador.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.15", features = ["serde"] }
diesel = { version = "1.4.5", features = ["postgres", "chrono"] }
ring = "0.16.15"
rocket = "0.4.5"
serde = { version = "1.0.115", features = ["derive"] }
validator = "0.10.1"
validator_derive = "0.10.1"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = [
    "json",
    "diesel_postgres_pool",
    "handlebars_templates",
    "tera_templates"
]
